# CRYPTO

./: CMakeLists.txt  README.md  packages.txt
CTF/crypto-asymmetric/RSA-Level-1/: rsa_1.py  solve.py
CTF/crypto-asymmetric/RSA-Level-2/: solve.py
CTF/crypto-asymmetric/RSA-Level-3/: rsa_3.py  solve.py
CTF/crypto-asymmetric/RSA-Level-4/: rsa_4.py  solve.py
CTF/crypto-asymmetric/RSA-Level-5/: solve.py
CTF/crypto-asymmetric/RSA-Level-6/: solve.py
CTF/crypto-asymmetric/RSA-Level-7/: rsa_7_server.py  solve.py
CTF/crypto-asymmetric/RSA-Level-8/: solve.py
CTF/crypto-asymmetric/RSA-Level-9/: boneh_durfee.sage  solve.py
CTF/crypto-asymmetric/nice-rsa/: challenge.py  solve.py
CTF/crypto-asymmetric/small-rsa/: challenge.py  solve.py
CTF/crypto-symmetric/back-to-the-future/: chall.py  solve.py
CTF/crypto-symmetric/decrypt-the-flag/: solve.py
CTF/crypto-symmetric/fool-the-oracle/: solve.py
CTF/crypto-symmetric/fool-the-oracle-v2/: solve.py
CTF/crypto-symmetric/fool-the-oracle-v3/: solve.py
CTF/crypto-symmetric/fool-the-oracle-v4/: chall.py  solve.py
CTF/crypto-symmetric/force-decryption/: ddd.py  solve.py
CTF/crypto-symmetric/forge-another-cookie/: chall.py  solve.py
CTF/crypto-symmetric/forge-another-json-cookie/: solve.py  solve2.py
CTF/crypto-symmetric/forge-cookie/: secret.py  solve.py
CTF/crypto-symmetric/guess-mode-one-shot/: solve.py
CTF/crypto-symmetric/guess-mode_double-shot/: solve.py
CTF/crypto-symmetric/long-file/: chall.py  solve.py
CTF/crypto-symmetric/long-secret-message/: solve.py
CTF/openssl-dgst/: keyed_dgst.c
CTF/openssl-enc/: dec1_firstdec.c  dec1_guessalgo.c  enc.enc  enc1_nopadding.c  name_cipher.c
CTF/openssl-hmac/: firsthmac.c  firsthmac_deprecated.c
CTF/openssl-rand/: bytewise_op.c
EXAMS/C/: 2020-07-19_DH.c  2020-09-18_RSA_1MB.c  2021-07-02_NONCENSE.c  2021-07-16_envelop_MAC.c  2023-07-03_rsa_server.c  crazy_protocol.c  hmac.c  process.c  sign_protocol.c
EXAMS/PYTHON/: 2020-07-19_cbc.py  2020-09-18_length_extension.py  2021-07-16_cbc2.py  lsb.py
OPENSSL/01_rand/: CMakeLists.txt  rand.c
OPENSSL/02_enc/: enc.c  enc.enc  enc2.c  enc3.c
OPENSSL/03_dgst/: hash.c  hash2.c  hmac.c  hmac2.c  hmac_verification.c
OPENSSL/04_bignum/: bignum.c  bignum2.c  prime.c
OPENSSL/05_asym/: encrypted.enc  private.pem  public.pem  rsa_keygen.c  rsa_sign.c
PYTHON/attacks/BF/: bf_server_cbc.py  bitflipping.py  cbc_bf.py  myconfig.py  mysecrets.py
PYTHON/attacks/CBCPaddingOracle/: CBCPaddingOracle_Server.py  CBCPaddingOracle_client.py  CBC_PaddingOracle_Attack.py
PYTHON/attacks/ECB/ECBCopyPaste/: ECB_CopyPaste_TestCookie_service.py  ECB_CopyPaste_server_genCookie_service.py  ECB_copyPaste_Attack.py
PYTHON/attacks/ECB/ECB_ACPA/: ECB_ACPAttack_Server.py  ECB_ACP_DecryptionAttack.py
PYTHON/attacks/ECB/ECBvsCBC/: ECBvsCBCClient.py  ECBvsCBCServer.py
PYTHON/attacks/KeyStreamReuse/: keystream_reuse_attack.py
PYTHON/attacks/LengthExtension/: md5_attack.py
PYTHON/attacks/RSA Attacks/: common_modulus.py  common_prime.py  factorDB.py  fermat_factorization.py  hastad_broadcast_RSA.py  low_public_exponent.py
PYTHON/attacks/RSA Attacks/LSB_Oracle_Attack/: LSB_Oracle_client.py
PYTHON/basics/asymmetric/: asym.py  dh.py  myprivatekey.pem  rsa_hazmat.py  rsa_pycryptodome.py
PYTHON/basics/symmetric/: aead.py  enc.enc  hash.py  hashlib_ex.py  kdf.py  rand_AES_block_padding.py  stream2.py  stream_ciphers.py
